--- a/test.html
+++ b/test.html
@@ -2,11 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
         <title>Victor e cel mai tare</title>
         
     </head>
-    <body>
+    <body1>
         <p>Sunt bun ! :D</p>
+        <p>Puam</p>
+        <p>Puam 2</p>
+        <p>Puam 3</p>
     </body>
 </html>
