--- a/test.html
+++ b/test.html
@@ -5,10 +5,11 @@
         <title>Victor e cel mai tare</title>
         
     </head>
-    <body1>
+    <body>
         <p>Sunt bun ! :D</p>
         <p>Puam</p>
         <p>Puam 2</p>
         <p>Puam 3</p>
+        <p>Puam 4</p>
     </body>
 </html>
